# rost-web

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
src/: error.rs  interpreter.rs  lexer.rs  lib.rs  nodes.rs  parser.rs  tokens.rs
web/: index.html  main.ts  style.css
web/assets/: icon.xcf
