[package]
name = "rost-web"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rost = { git = "https://github.com/RubixDev/rost" }
wasm-bindgen = "0.2.79"
